// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton /> should render all text skeleton variants correctly 1`] = `
Array [
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 56,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="h1"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 48,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="h2"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 40,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="h3"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 32,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="h4"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 28,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="h5"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 24,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="body1"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 20,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="body2"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 16,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="overline"
      width="100"
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "opacity": 0.1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F5F5FA",
            "height": 12,
            "width": 100,
          },
        ]
      }
      type="text"
      variant="exception"
      width="100"
    />
  </View>,
]
`;

exports[`<Skeleton /> should render the circular skeleton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "opacity": 0.1,
    }
  }
>
  <View
    height={64}
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5FA",
          "borderRadius": 9999,
          "height": 64,
          "width": 64,
        },
      ]
    }
    type="circular"
    width={64}
  />
</View>
`;

exports[`<Skeleton /> should render the rectangular skeleton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "opacity": 0.1,
    }
  }
>
  <View
    height={200}
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5FA",
          "height": 200,
          "width": 400,
        },
      ]
    }
    type="rectangular"
    width={400}
  />
</View>
`;

exports[`<Skeleton /> should render the text skeleton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "opacity": 0.1,
    }
  }
>
  <View
    height={32}
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5FA",
          "height": 24,
          "width": 61,
        },
      ]
    }
    type="text"
    variant="body1"
    width={61}
  />
</View>
`;
